# TG-VLM-Agent

./: README.md  pyproject.toml
src/: agent_builder.py  config.py  llm.py  scheduler_manager.py  user_memory.py  users_cache.py
src/agents/: agents.py  prompts.py  structured_outputs.py
src/beautylogger/: bl.py
src/graphs/: __init__.py  default_graph.py  graph_states.py  news_summary_graph.py  prompts.py  structured_outputs.py  utils.py
src/tgbot/: bot.py  middleware.py  utils.py
