[project]
name = "AIPM"
version = "0.1.0"
dependencies = [
    "accessify==0.3.1",
    "aiogram>=3.24.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "beautifulsoup4==4.13.4",
    "bing-image-downloader>=1.1.2",
    "cachetools==5.5.2",
    "certifi==2025.7.14",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.2.2",
    "colorama>=0.4.6",
    "curl-cffi==0.12.0",
    "dataclasses-json==0.6.7",
    "ddgs>=9.10.0",
    "duckduckgo-search==8.1.1",
    "elastic-transport==9.1.0",
    "elasticsearch==9.1.0",
    "fake-useragent>=2.2.0",
    "fastapi>=0.128.0",
    "filelock==3.18.0",
    "frozendict==2.4.6",
    "frozenlist==1.7.0",
    "fsspec==2025.7.0",
    "google==3.0.0",
    "google-api-core==2.25.1",
    "google-api-python-client==2.177.0",
    "google-auth==2.40.3",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.2.2",
    "googleapis-common-protos==1.70.0",
    "h11==0.16.0",
    "hf-xet==1.1.5",
    "httpcore==1.0.9",
    "httplib2==0.22.0",
    "httpx==0.28.1",
    "httpx-sse==0.4.1",
    "huggingface-hub==0.34.3",
    "idna==3.10",
    "jinja2==3.1.6",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "langchain==0.3.27",
    "langchain-community==0.3.27",
    "langchain-core==0.3.72",
    "langchain-experimental==0.3.4",
    "langchain-ollama==0.3.6",
    "langchain-text-splitters==0.3.9",
    "langgraph>=0.6.2",
    "langgraph-checkpoint==2.1.1",
    "langgraph-prebuilt==0.6.2",
    "langgraph-sdk==0.2.0",
    "langsmith==0.4.9",
    "librosa>=0.11.0",
    "loguru>=0.7.3",
    "lxml==6.0.0",
    "markupsafe==3.0.2",
    "marshmallow==3.26.1",
    "mpmath==1.3.0",
    "multidict==6.6.3",
    "multitasking==0.0.12",
    "mypy-extensions==1.1.0",
    "networkx==3.5",
    "numpy==2.3.2",
    "oauthlib==3.3.1",
    "ollama==0.5.1",
    "openai>=2.15.0",
    "orjson==3.11.1",
    "ormsgpack==1.10.0",
    "outcome==1.3.0.post0",
    "packaging==25.0",
    "pandas==2.3.1",
    "peewee==3.18.2",
    "pillow>=12.1.0",
    "platformdirs==4.3.8",
    "primp==0.15.0",
    "propcache==0.3.2",
    "proto-plus==1.26.1",
    "protobuf==6.31.1",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "pyparsing==3.2.3",
    "pysocks==1.7.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv==1.1.1",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "redis>=7.1.0",
    "regex==2025.7.34",
    "requests==2.32.4",
    "requests-oauthlib==2.0.0",
    "requests-toolbelt==1.0.0",
    "rsa==4.9.1",
    "safetensors==0.5.3",
    "selenium==4.34.2",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "sounddevice==0.5.2",
    "soundfile==0.13.1",
    "soupsieve==2.7",
    "sqlalchemy==2.0.42",
    "sympy==1.14.0",
    "tenacity==9.1.2",
    "tldextract>=5.3.1",
    "tokenizers==0.21.4",
    "torch==2.7.1",
    "torchaudio==2.7.1",
    "tqdm==4.67.1",
    "transformers==4.54.1",
    "trio==0.30.0",
    "trio-websocket==0.12.2",
    "typing-extensions==4.14.1",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "undetected-chromedriver==3.5.5",
    "uritemplate==4.2.0",
    "urllib3==2.5.0",
    "uvicorn[standard]>=0.24.0",
    "websocket-client==1.8.0",
    "websockets>=15.0.1",
    "wsproto==1.2.0",
    "xxhash==3.5.0",
    "yarl==1.20.1",
    "yfinance==0.2.65",
    "zstandard==0.23.0",
]
